--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-polars == 0.19.3
-pyarrow == 9.0.0
-pandas == 1.5.3
-plotly == 5.15.0
+polars == 1.1.0
+pyarrow == 16.1.0
+pandas == 2.2.2
+plotly == 5.22.0
 notebook
+nbformat
